--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 
     <div style="clear:both;"></div>
 
-    <h2 id="analyse" style="margin-top:2em">Analyse <span>Fetch from the moderation queue or enter your own for testing</span></h2>
+    <h2 id="analyse" style="margin-top:2em">Analyse <span>Fetch from the moderation queue or enter your own text for testing</span></h2>
     <div id="submission">
         <div style="padding:1em">
             <p>
@@ -145,17 +145,17 @@
                 <div id="hStatus">
                     <p>
                         Status will be <b>Blocked</b> if selected private information is found, such as bank details, emails and urls.
-                        Or if frequence hate speech and negative sentiment is present.
+                        Or if frequent hate speech and negative sentiment is present.
                     </p>
                     <p>For reviews we also block if any hate speech is found. Hate speach may be valid in the context of a story.</p>
                 </div>
                 <div id="hSentiment">
                     <p>Large negative values may indicate more likely cases of abuse.</p>
-                    <p>It's shown on story summaries to help users decide if it suit them.</p>
+                    <p>It's shown on story summaries in VR to help users decide if it suits them.</p>
                     <p>It's also accumulated for reviews. This is experimental and it will be interesting to see how sentiment scores match up with typical 5-star ratings.</p>
                 </div>
                 <div id="hHate">
-                    <p>Hate speech categories are shown to users to highlight what content you may experience in a story. Simiar to content guidelines seen before some TV shows.</p>
+                    <p>Hate speech categories are shown to users to highlight what content you may experience in a story. Similar to content guidelines seen before some TV shows.</p>
                 </div>                
                 <div id="hEmotionalTraits">
                     <p>These keywords give an indication of what a story will be like before you invest time into reading it.</p>
@@ -166,7 +166,7 @@
                 </div>
                 <div id="hModeration">
                     <p>Shows stories from the metaverse that have been flagged for your attension.</p>
-                    <p><b>OK</b> These stories have been auto approved but are viewed as high risk due to hate speech and negative sentiment</p>
+                    <p><b>OK</b> These stories have been auto approved but are viewed as high risk due to hate speech and negative sentiment.</p>
                     <p><b>Blocked</b> These stories will have been blocked because they containing certain personal information or because they are high risk due to the amount of hate speech.</p>
                     <p><b>Reported</b> These stories are currently approved, but someone has reported them for hate speech.</p>
                     <p>Fetch a story into the "analyse" window then submit it to see the full analysis and then decide to <b>approve</b> or <b>reject</b> it.</p>
