--- a/src/index.html
+++ b/src/index.html
@@ -144,8 +144,8 @@
             <div class="content" id="popupContent">
                 <div id="hStatus">
                     <p>
-                        Status will be <b>Blocked</b> if selected private information is found, such as bank details, emails and urls.
-                        Or if frequent hate speech and negative sentiment is present.
+                        <b>Blocked</b> stories are not public until you approve them
+                        <b>OK</b> stories are currently public
                     </p>
                     <p>For reviews we also block if any hate speech is found. Hate speach may be valid in the context of a story.</p>
                 </div>
@@ -166,8 +166,8 @@
                 </div>
                 <div id="hModeration">
                     <p>Shows stories from the metaverse that have been flagged for your attension.</p>
-                    <p><b>OK</b> These stories have been auto approved but are viewed as high risk due to hate speech and negative sentiment.</p>
-                    <p><b>Blocked</b> These stories will have been blocked because they containing certain personal information or because they are high risk due to the amount of hate speech.</p>
+                    <p><b>OK</b> These stories have been auto approved but need checking because they include hate speech.</p>
+                    <p><b>Blocked</b> These stories will have been blocked because they containing certain personal information or because they are high risk due to negative sentiment and / or hate speech.</p>
                     <p><b>Reported</b> These stories are currently approved, but someone has reported them for hate speech.</p>
                     <p>Fetch a story into the "analyse" window then submit it to see the full analysis and then decide to <b>approve</b> or <b>reject</b> it.</p>
                 </div>
