--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div id="notice">
         <p>
             View <a href="https://github.com/Jumbli/IdeaEngineModeration">source code</a>, 
-            watch the <a href="">video</a> to see the VR integration in action,<br/>
+            watch the <a href="https://youtu.be/sTOJnSvYz-w">video</a> to see the VR integration in action,<br/>
             then moderate the sample posts below, created from within VR.
         </p>
         <p>
